--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="bomb_1f4a3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,11 +25,81 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Minesweeper Game</title>
+    <style>
+      body {
+        background-color: #228b22;
+        background-image: url("727078-cool-windows-xp-desktop-backgrounds-1920x1080.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+
+      }
+      #header {
+        color: white;
+        font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+        text-align: center;
+      }
+      #img {
+        position: relative;
+        left: 500px;
+      }
+      #head {
+        background-color: #0055E5;
+        height: 25px;
+        width: 290px;
+        border-radius: 4%;
+        position: relative;
+        left: 503px;
+        top: 20px;
+      }
+  
+      #head_two {
+        background-color: white;
+        height: 25px;
+        width: 285px;
+        border-radius: 4%;
+        position: relative;
+        left: 505px;
+        top: 20px;
+      }
+  
+
+      #image {
+          position: relative;
+
+      }
+      #xpimg {
+        position: relative;
+          left:220px;
+
+      }
+    </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+        <div className="game">
+            <h1 id="header">Welcome to Minesweeper Game</h1>
+            <h2 id="header">LET'S GET BACK TO THE 90'S</h2>
+        </div>
+
+    <section id="head">
+        <div>
+            <img id="xpimg" src="1.png" alt=""></img>
+            
+        </div>
+ 
+    </section>
+    <section id="head_two">
+
+        <div id="">
+            <img id="image" src="Minesweeper-2018-04-21-23_54_01.png" alt=""></img>
+         </div>
+
+        </section>
+    <section>
+      <div id="root"></div>
+    </section>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
